--- a/grills.html
+++ b/grills.html
@@ -15,7 +15,7 @@
     	<script type="text/javascript" src="js/tropicana.js"></script>
 	</head>
 
-	<body>
+	<body class="custom-background">
 		<!-- Begin Navbar -->
 		<div class="navbar-wrapper" id="home">
 			<div class="container">
@@ -81,24 +81,14 @@
 		</div>
 		<!-- End Navbar-->
 
-		<!-- Side Menu -->
-		<div class ="my-side-nav hidden-md hidden-sm hidden-xs">
-			 <ul class="nav nav-tabs nav-stacked span3">
-			 	<li class="side-nav1 active"><a href="#lion" ><img src="images/lion/lion-grills.png" alt="Lion Grills" width="170px" height="90px"></a></li>
-			 	<li class="side-nav2"><a href="#allegra"><img src="images/allegra_logo.png" alt="Allegra" width="170px" height="80px"></a></li>
-			 	<li class="side-nav3"><a href="#fire-magic" ><img src="images/fire-magic.jpg" alt="Fire Magic" width="170px" height="80px"></a></li>
-			 </ul>
-		</div>
-		<!-- end Side Menu -->
-
-		<div class="content-wrapper">
-			<div class="container-fluid">
-				<div class="margin-right">
+		<div class="content-wrapper margin-right">
+			<div class="container-fluid default-background">
+				<div class="">
 				<!-- Lion -->
-				<div  data-anchor="lion">
+				<div   data-anchor="lion">
 					<div class = "row">
-						<div class="col-xs-offset-4 col-xs-6 col-sm-offset-5 col-lg-8">
-							<h1 id="lion" class="grill-header">Lion</h1>
+						<div class="col-xs-offset-2 col-xs-8">
+							<h1 id="lion" class="header-features grill-header">Lion</h1>
 						</div>
 					</div>
 					<div class="row">
@@ -174,8 +164,8 @@
 
 				<!-- Allegra -->
 				<div class="row" data-anchor="allegra">
-					<div class="col-xs-offset-2 col-sm-offset-5 col-xs-9 col-lg-8">
-						<h1 id="allegra">Allegra</h1>
+					<div class="col-xs-offset-2 col-xs-8">
+						<h1 class="header-features" id="allegra">Allegra</h1>
 					</div>
 				</div>
 				<div class="allegra-container">
@@ -241,51 +231,146 @@
 
 				<!-- Fire Magic -->
 				<div class="firemagic-container" id="fire-magic" data-anchor="fire-magic">
-					<div class="col-xs-offset-1 col-sm-offset-4 col-xs-11 col-sm-8">
-						<h1>Fire Magic</h1>
+					<div class="col-xs-offset-2 col-xs-8">
+						<h1 class="header-features">Fire Magic</h1>
 					</div>
 					<div class="row">
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/firemagic/deluxe-gourmet-countertop.jpg" alt="Deluxe Gourmet Countertop" width="250" height="225">
+						<div class="col-md-5" style="margin-left:25px;">
+							<img class="img-responsive" src="images/firemagic/grill-model-echelon-e1060i-lg.jpg" alt="Grill Echelon e1060i" width="250" height="225">
+							<h4 style="margin-left:50px;">E1060i 48” Built In Grill</h4>
+							<ul>
+								<li>Cooking surface 1056 sq.in.</li>
+								<li>Primary grilling area 112,000 BTU’s</li>
+								<li>Cut out: 50”w x 23 ½”d x 12”h</li>
+								<li><a href="grills/fm-e1060i.html">Learn More</a></li>
+							</ul>
 						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/firemagic/regal-countertop.jpg" alt="Regal Countertop" width="250" height="225">
-						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/firemagic/custom-charcoal.jpg" alt="Custom Charcoal" width="250" height="225">
-						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/firemagic/deluxe-gourmet-builtin.jpg" alt="Deluxe Gourmet Builtin" width="250" height="225">
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/firemagic/A790i.jpg" alt="" width="250" height="225">
-						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/firemagic/E1060i.jpg" alt="" width="250" height="225">
-						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/firemagic/echelon-diamond.jpg" alt="Echelon Diamond Series" width="250" height="225">
-						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/firemagic/aurora-series.jpg" alt="" width="250" height="225">
+						<div class="col-md-offset-1 col-md-5">
+							<img class="img-responsive" src="images/firemagic/grill-model-echelon-e790i-lg.jpg" alt="Echelon e7901i" width="250" height="225">
+							<h4 style="margin-left:30px;">E790i 36” Built In Grill</h4>
+							<ul>
+								<li>Cooking surface 792 sq.in.</li>
+								<li>Primary grilling area 99,000 BTU’s</li>
+								<li>Cut out: 37”w x 23 ½”d x 12”h</li>
+								<li><a href="grills/fm-e790i.html">Learn More</a></li>
+							</ul>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/firemagic/charcoal-series.jpg" alt="Charcoal Series" width="250" height="225">
+						<div class="col-md-5" style="margin-left:25px;">
+							<img class="img-responsive" src="images/firemagic/grill-model-echelon-e660i-lg.jpg" alt="Echelon E660i" width="250" height="225">
+							<h4 style="margin-left:50px;">E660i 30” Built In Grill</h4>
+							<ul>
+								<li>Cooking surface 660 sq.in.</li>
+								<li>Primary grilling area 78,000 BTU’s</li>
+								<li>Cut out: 31¼”w x 23 ½”d x 12”h</li>
+								<li><a href="grills/fm-e660i.html">Learn More</a></li>
+							</ul>
 						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/firemagic/legacy-grills.jpg" alt="Legacy Grills" width="250" height="225">
-						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/firemagic/electric-grills.jpg" alt="Electric Grills" width="250" height="225">
-						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/firemagic/" alt="" width="250" height="225">
+						<div class="col-md-offset-1 col-md-5">
+							<img class="img-responsive" src="images/firemagic/ed_e1060i_a_closed.jpg" alt="Echelon e1060i closed" width="250" height="225">
+							<h4 style="margin-left:30px;">E1060i “A” 48 Built In Grill</h4>
+							<ul>
+								<li>Cooking surface 1056 sq.in.</li>
+								<li>Primary grilling area 112,000 BTU’s</li>
+								<li>Cut out: 50”w x 23 ½”d x 12”h</li>
+								<li><a href="grills/fm-e1060i-A.html">Learn More</a></li>
+							</ul>
 						</div>
 					</div>
+
+					<div class="row">
+						<div class="col-md-5" style="margin-left:25px;">
+							<img class="img-responsive" src="images/firemagic/ed_e790i_closed.jpg" alt="Echelon e790i closed" width="250" height="225">
+							<h4 style="margin-left:50px;">E790i “A” 36 Built In Grill</h4>
+							<ul>
+								<li>Cooking surface 792 sq.in.</li>
+								<li>Primary grilling area 99,000 BTU’s</li>
+								<li>Cut out: 37”w x 23 ½”d x 12”h</li>
+								<li><a href="grills/fm-e790i-A.html">Learn More</a></li>
+							</ul>
+						</div>
+						<div class="col-md-offset-1 col-md-5">
+							<img class="img-responsive" src="images/firemagic/ed_e660i_a_closed.jpg" alt="Echelon e660i closed" width="250" height="225">
+							<h4 style="margin-left:30px;">E660i “A” 30″ Built In Grill</h4>
+							<ul>
+								<li>Cooking surface 660 sq.in.</li>
+								<li>Primary grilling area 78,000 BTU’s</li>
+								<li>Cut out: 31¼”w x 23 ½”d x 12”h</li>
+								<li><a href="grills/fm-e660i-A.html">Learn More</a></li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-md-5" style="margin-left:25px;">
+							<img class="img-responsive" src="images/firemagic/grill-lg-aurora-a830i.jpg" alt="Aurora A830i" width="250" height="225">
+							<h4 style="margin-left:50px;">A830i Combo Grill 48″</h4>
+							<ul>
+								<li>Cooking surface 828 sq.in.</li>
+								<li>One half dedicated to gas grilling; ½ for charcoal grilling</li>
+								<li>Primary grilling area 50,000 BTU’s and 26,000 Charcoal Ignitor</li>
+								<li><a href="grills/fm-A830i.html">Learn More</a></li>
+							</ul>
+						</div>
+						<div class="col-md-offset-1 col-md-5">
+							<img class="img-responsive" src="images/firemagic/grill-lg-aurora-a790i.jpg" alt="Aurora A790i* FEATURES" width="250" height="225">
+							<h4 style="margin-left:30px;">A790i 36″</h4>
+							<ul>
+								<li>Cooking surface 792 sq.in.</li>
+								<li>Primary grilling area 90,000 BTU’s</li>
+								<li>Cut out: 37¾”w x 23 ½”d x 12” h</li>
+								<li><a href="grills/fm-A790i.html">Learn More</a></li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-md-5" style="margin-left:25px;">
+							<img class="img-responsive" src="images/firemagic/grill-lg-aurora-a660i.jpg" alt="Aurora A660i" width="250" height="225">
+							<h4 style="margin-left:50px;">A660i 30″</h4>
+							<ul>
+								<li>Cooking surface 660 sq.in.</li>
+								<li>Primary grilling area 75,000 BTU’s</li>
+								<li>Cut out: 32”w x 23 ½”d x 12” h</li>
+								<li><a href="grills/fm-A660i.html">Learn More</a></li>
+							</ul>
+						</div>
+						<div class="col-md-offset-1 col-md-5">
+							<img class="img-responsive" src="images/firemagic/grill-lg-aurora-a540i.jpg" alt="A540i 30" width="250" height="225">
+							<h4 style="margin-left:30px;">A540i 30″</h4>
+							<ul>
+								<li>Cooking surface 540 sq.in.</li>
+								<li>Primary grilling area 60,000 BTU’s</li>
+								<li>Cut out: 32”w x 19 ½”d x 12” h</li>
+								<li><a href="grills/fm-A540i.html">Learn More</a></li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-md-5" style="margin-left:25px;">
+							<img class="img-responsive" src="images/firemagic/grill-lg-aurora-a530i.jpg" alt="A530i 24" width="250" height="225">
+							<h4 style="margin-left:50px;">A530i 24″</h4>
+							<ul>
+								<li>Cooking surface 528 sq.in.</li>
+								<li>Primary grilling area 60,000 BTU’s</li>
+								<li>Cut out: 25 ½”w x 23 ½”d x 12” h</li>
+								<li><a href="grills/fm-A530i.html">Learn More</a></li>
+							</ul>
+						</div>
+						<div class="col-md-offset-1 col-md-5">
+							<img class="img-responsive" src="images/firemagic/grill-lg-aurora-a430i.jpg" alt="A430i 24" width="250" height="225">
+							<h4 style="margin-left:30px;">A430i 24″</h4>
+							<ul>
+								<li>Cooking surface 432 sq.in.</li>
+								<li>Primary grilling area 50,000 BTU’s</li>
+								<li>Cut out: 25 ½”w x 19 ½”d x 12” h</li>
+								<li><a href="grills/fm-A430i.html">Learn More</a></li>
+							</ul>
+						</div>
+					</div>
+
 				</div>
 				<!-- end Fire Magic -->
 			</div>
