--- a/grills/allegra-32.html
+++ b/grills/allegra-32.html
@@ -15,7 +15,7 @@
     	<script type="text/javascript" src="../js/tropicana.js"></script>
 	</head>
 
-	<body>
+	<body class="custom-background">
 		<!-- Begin Navbar -->
 		<div class="navbar-wrapper" id="home">
 			<div class="container">
@@ -81,8 +81,8 @@
 		</div>
 		<!-- End Navbar-->
 
-		<div class="content-wrapper">
-			<div class="container-fluid margin-right">
+		<div class="content-wrapper margin-right">
+			<div class="container-fluid default-background">
 				<div class="row">
 					<div class="col-xs-12">
 						<h1 style="font-weight:bold; border-bottom:3px solid #EEE">32" Allegra Grill</h1>
