--- a/grills/fm-A790i.html
+++ b/grills/fm-A790i.html
@@ -53,7 +53,7 @@
                 						<li><a href="../patio.html#summerset">Summerset</a></li>
                 					</ul>
                 				</li>
-                				<li class="dropdown hidden-xs"><a href="../patio.html"  role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
+                				<li class="dropdown hidden-xs"><a href="patio.html"  role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="../patio.html#darlee">Darlee</a></li>
                 						<li><a href="../patio.html#summerset">Summerset</a></li>
@@ -85,40 +85,48 @@
 			<div class="container-fluid default-background">
 				<div class="row">
 					<div class="col-xs-12">
-						<h1 style="font-weight:bold; border-bottom:3px solid #EEE">32" Allegra Grill/Rostisserie</h1>
+						<h1 style="font-weight:bold; border-bottom:3px solid #EEE">Aurora A790i*</h1>
 					</div>
 				</div>
 
 				<div class="row top-buffer">
 					<div class="col-xs-12 hidden visible-xs nopadding">
-						<img class="img-responsive" src="../images/allegra/32-allegra-grill-rostisserie.jpg" alt='32" Allegra Grill'>
+						<img class="img-responsive" src="../images/firemagic/grill-lg-aurora-a790i.jpg" alt="a790i">
 					</div>
 					<div class="col-xs-12 col-sm-6  nopadding">
+                        <img class="img-responsive" style="margin-left: 30px; margin-bottom: 15px;" src="../images/firemagic/grill-title-aurora-a790i.gif">
 						<ul>
-							<li>4 Main Burners at 15,000 BTUs each</li>
-                            <li>700 Square Inches of Total Cooking Area (510 Main Grilling Area)</li>
-                            <li>All Stainless Steel Construction</li>
-                            <li>304 Stainless Steel Cooking Grills</li>
-                            <li>Warming Rack</li>
-                            <li>Temperature Gauge</li>
-                            <li>Flame Throw Ignition System</li>
-                            <li>Double Inside Lights</li>
-                            <li>Pull Out Grease Tray</li>
-                            <li>Stainless Steel Flame Tamers</li>
-                            <li>Available in LP or NG</li>
-                            <li>Optional Cast Stainless Burners Available</li>
-                            <li>Cutout Dimensions: 30 1/2"W x 21"D x 9"H</li>
-                            <li>Infrared Back Burner</li>
-                            <li>Model Number: AHT-AL-32R</li>
+							<li>Cast stainless steel burners (E-burners)</li>
+							<li>Largest cooking space compared to other same size grills</li>
+							<li>Most BTU’s per square inch. Heats fast and stays hot!</li>
+							<li>16-gauge stainless steel flavor grids are engineered for durability and even heat distribution</li>
+							<li>Advanced Hot Surface Ignition simply push in the control knob, turn up the gas and light the grill</li>
+							<li>Built-in Interior Lights</li>
+							<li>Integral and removable oven warming rack for light cooking or warming food</li>
+							<li>Meat probe with digital thermometer</li>
+                            <li>Optional recessed stainless steel rotisserie back burner and heavy duty rotisserie kit</li>
+                            <li>Built-in storage rack for rotisserie spit rod</li>
+                            <li>Extensive line of complementary accessories</li>
+							<li>Cut out 37¾”w x 23 ½”d x 12” h</li>
+							<li>BTUs backburner 20,000</li>
+							<li>Cooking Surface 790 square inches (36" x 22")</li>
 						</ul>
 					</div>
 					<div class="col-sm-6 hidden-xs nopadding">
-                        <a href='../images/allegra/32-allegra-grill-rostisserie.jpg'>
-						  <img class="img-responsive" src="../images/allegra/32-allegra-grill-rostisserie.jpg" alt='32" Allegra Grill'>
-                        </a>
+						<img class="img-responsive" src="../images/firemagic/grill-lg-aurora-a790i.jpg" alt="a790i">
 					</div>
 
 				</div>
+
+            <div class="row">
+                    <div class="col-xs-12">
+                        <p><strong>This unit can now be ordered with the optional Magic View Window</strong> (Sold Separately)</p>
+                        <p><strong>15 Year warranty on backburners</strong><br>
+                            Cast stainless steel burners, stainless steel housing and stainless steel cooking grids are warranted for as long as you own your grill
+                        </p>
+                    </div>
+			</div>
+		</div>
 
 	</body>
 </html>
