--- a/grills/fm-e790i.html
+++ b/grills/fm-e790i.html
@@ -53,7 +53,7 @@
                 						<li><a href="../patio.html#summerset">Summerset</a></li>
                 					</ul>
                 				</li>
-                				<li class="dropdown hidden-xs"><a href="../patio.html"  role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
+                				<li class="dropdown hidden-xs"><a href="patio.html"  role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="../patio.html#darlee">Darlee</a></li>
                 						<li><a href="../patio.html#summerset">Summerset</a></li>
@@ -85,40 +85,46 @@
 			<div class="container-fluid default-background">
 				<div class="row">
 					<div class="col-xs-12">
-						<h1 style="font-weight:bold; border-bottom:3px solid #EEE">32" Allegra Grill/Rostisserie</h1>
+						<h1 style="font-weight:bold; border-bottom:3px solid #EEE">Echelon Diamond E790i*</h1>
 					</div>
 				</div>
 
 				<div class="row top-buffer">
 					<div class="col-xs-12 hidden visible-xs nopadding">
-						<img class="img-responsive" src="../images/allegra/32-allegra-grill-rostisserie.jpg" alt='32" Allegra Grill'>
+						<img class="img-responsive" src="../images/firemagic/grill-model-echelon-e790i-lg.jpg" alt="E790i">
 					</div>
 					<div class="col-xs-12 col-sm-6  nopadding">
+                        <img class="img-responsive" style="margin-left: 30px; margin-bottom: 15px;" src="../images/firemagic/grill-title-echelon-e790i.gif">
 						<ul>
-							<li>4 Main Burners at 15,000 BTUs each</li>
-                            <li>700 Square Inches of Total Cooking Area (510 Main Grilling Area)</li>
-                            <li>All Stainless Steel Construction</li>
-                            <li>304 Stainless Steel Cooking Grills</li>
-                            <li>Warming Rack</li>
-                            <li>Temperature Gauge</li>
-                            <li>Flame Throw Ignition System</li>
-                            <li>Double Inside Lights</li>
-                            <li>Pull Out Grease Tray</li>
-                            <li>Stainless Steel Flame Tamers</li>
-                            <li>Available in LP or NG</li>
-                            <li>Optional Cast Stainless Burners Available</li>
-                            <li>Cutout Dimensions: 30 1/2"W x 21"D x 9"H</li>
-                            <li>Infrared Back Burner</li>
-                            <li>Model Number: AHT-AL-32R</li>
+							<li>Wood chip smoker with dedicated 3,000 BTU’s burner</li>
+							<li>Cast stainless steel burners (E-burners)</li>
+							<li>All stainless steel cooking grids</li>
+							<li>Contoured control panel</li>
+							<li>16 gauge stainless steel flavor grids</li>
+							<li>Back lit safety knobs</li>
+							<li>Optional magic view window</li>
+							<li>Heat zone separators</li>
+							<li>Four (4) zone illuminated chromed digital thermometer with meat probe</li>
+							<li>Halogen lamps for evening grilling</li>
+							<li>Cut out 50” w 23 ½” d x 12” h</li>
+							<li>BTUs backburner 11,000 (x2)</li>
+							<li>Cooking Surface 1056 square inches (48″ x 22″)</li>
 						</ul>
 					</div>
 					<div class="col-sm-6 hidden-xs nopadding">
-                        <a href='../images/allegra/32-allegra-grill-rostisserie.jpg'>
-						  <img class="img-responsive" src="../images/allegra/32-allegra-grill-rostisserie.jpg" alt='32" Allegra Grill'>
-                        </a>
+						<img class="img-responsive" src="../images/firemagic/grill-model-echelon-e790i-lg.jpg" alt="E790i">
 					</div>
 
 				</div>
+
+            <div class="row">
+                    <div class="col-xs-12">
+                        <p><strong>15 Year warranty on backburners</strong><br>
+                            Cast stainless steel burners, stainless steel housing and stainless steel cooking grids are warranted for as long as you own your grill
+                        </p>
+                    </div>
+			</div>
+		</div>
 
 	</body>
 </html>
