--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
     </script>
 	</head>
 
-	<body>
+	<body class="custom-background">
 		<!-- Begin Navbar -->
 		<div class="navbar-wrapper" id="home">
 			<div class="container">
@@ -105,8 +105,8 @@
 		</div>
 		<!-- End Navbar-->
 
-		<div class="content-wrapper">
-			<div class="container-fluid">
+		<div class="content-wrapper margin-right">
+			<div class="container-fluid default-background">
 				<div class="row">
 					<div class="col-xs-offset-3 col-xs-9">
 						<h1>Contact Us</h1>
@@ -136,7 +136,7 @@
 							</div>
 
 							<div class="form-group">
-								<label class="control-label col-xs-5" for="phone">Phone Number</label>
+								<label class="control-label col-xs-9" for="">Phone Number</label>
 								<div class="col-xs-11">
 									<input type="tel" class="form-control" id="phone" placeholder="Phone number">
 								</div>
@@ -166,11 +166,9 @@
 
 					<div class="col-md-6 col-xs-12">
 						<div class="row">
-							<div class="col-xs-offset-1 col-xs-11">
+							<div class="col-xs-offset-1 col-xs-12">
 								<h4>Schedule an appointment and visit our shop! Get directions below.</h4>
-							
-
-							<div id="map"></div>
+								<div id="map"></div>
 							</div>
 						</div>
 					</div>
