--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
 		<!-- End Navbar-->
 
 		<div class="content-wrapper margin-right">
-			<div class="container-fluid default-background">
+			<div class="container-fluid default-background margin-bottom">
 				<div class="row">
 					<div class="col-xs-offset-3 col-xs-9">
 						<h1>Contact Us</h1>
