--- a/grills.html
+++ b/grills.html
@@ -83,7 +83,14 @@
 
 		<div class="content-wrapper margin-right">
 			<div class="container-fluid default-background">
-				<div class="">
+
+				<div class="row" style="padding-top: 15px; font-size:18px; color:#4d4d4d;">
+					<div class="col-xs-offset-1 col-xs-10">
+						<p><strong>
+							Tropicana is an official dealer for the hottest and most luxurious grills. We offer the highest quality built-in grills from Lion, Allegra and Fire Magic. Look below to find the grill which best suits your needs.
+						</strong></p>
+					</div>
+				</div>
 				<!-- Lion -->
 				<div   data-anchor="lion">
 					<div class = "row">
@@ -92,7 +99,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-lg-12">
+						<div class="col-xs-offset-1 col-xs-10">
 						<p>Lion Premium Grills offers 2 luxurious stainless steel gas grills — the L75000 which features 4 burners and the L90000 which showcases 5 total burners — which are crafted from only the highest quality materials. Lion premium grills are stacked with a wide range of options and are designed and manufactured by experts to provide the user with the ultimate grilling experience.</p>
 						</div>
 					</div>
