--- a/grills.html
+++ b/grills.html
@@ -72,7 +72,6 @@
                 					</ul>
                 				</li>
                 				<li><a href="contact.html">Contact</a></li>
-                				<li><a href="testimonies.html">Testimonies</a></li>
               				</ul>
 						</div>
 					</div>
@@ -84,9 +83,9 @@
 		<div class="content-wrapper margin-right">
 			<div class="container-fluid default-background">
 
-				<div class="row" style="padding-top: 15px; font-size:18px; color:#4d4d4d;">
+				<div class="row" style="padding-top: 30px; font-size:18px; color:#4d4d4d;">
 					<div class="col-xs-offset-1 col-xs-10">
-						<p><strong>
+						<p style="line-height: 100%;"><strong>
 							Tropicana is an official dealer for the hottest and most luxurious grills. We offer the highest quality built-in grills from Lion, Allegra and Fire Magic. Look below to find the grill which best suits your needs.
 						</strong></p>
 					</div>
