--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,16 @@
         		map: map,
         		title: "Tropicana Outdoor Living"
         	});
+
+        	google.maps.event.addDomListener(window, "resize", function() {
+	   			var center = map.getCenter();
+	   			google.maps.event.trigger(map, "resize");
+	   			map.setCenter(center); 
+			});
       	}
       	google.maps.event.addDomListener(window, 'load', initialize);
+
+      	
     </script>
 	</head>
 
@@ -96,7 +104,6 @@
                 					</ul>
                 				</li>
                 				<li class="active"><a href="contact.html">Contact</a></li>
-                				<li><a href="testimonies.html">Testimonies</a></li>
               				</ul>
 						</div>
 					</div>
@@ -108,8 +115,8 @@
 		<div class="content-wrapper margin-right">
 			<div class="container-fluid default-background margin-bottom">
 				<div class="row">
-					<div class="col-xs-offset-3 col-xs-9">
-						<h1>Contact Us</h1>
+					<div class="col-xs-offset-3 col-xs-6">
+						<h1 class="center">Contact Us</h1>
 					</div>
 				</div>
 				
