--- a/cal-spas.html
+++ b/cal-spas.html
@@ -71,50 +71,18 @@
 		</div>
 		<!-- End Navbar-->
 
-		<div id="swim-spas" class="content-wrapper margin-right">
+		<div id="Cal-spas" class="content-wrapper margin-right">
 			<div class="container-fluid default-background">
 
 				<div class = "row">
 						<div class="col-xs-offset-2 col-xs-8">
-							<h1 class="header-features grill-header">Swim Spas</h1>
+							<h1 class="header-features grill-header">Cal Spas</h1>
 						</div>
-				</div>
-				<div class="row">
-					<div class="col-xs-12">
-						<img class="img-responsive" src="images/swimmer.jpg" alt="Swim Spas Banner">
 					</div>
-
-				</div>
 
 				<div class="row">
 		            <div class="col-xs-12 top-buffer">
-		                <ul class="hide-bullets nopadding">
-		                    <li class="col-sm-4">
-		                    	<h4 class="center">Swim Spa F1239</h4>
-		                    	<a class="thumbnail" href="spas/F1239.html" ><img src="images/spas/F1239-Large1.jpg"></a>
-		                    </li>
-
-		                    <li class="col-sm-4">
-		                    	<h4 class="center">Swim Spa F1418</h4>
-		                        <a class="thumbnail "href="spas/F1418.html"><img src="images/spas/FP1418-series.png"></a>
-		                    </li>
-
-		                    <li class="col-sm-4">
-		                    	<h4 class="center">Swim Spa F1439</h4>
-		                        <a class="thumbnail" href="spas/F1439.html"><img src="images/spas/calF1439.jpg"></a>
-		                    </li>
-
-		                    <li class="col-sm-4">
-		                    	<h4 class="center">Swim Spa F1640</h4>
-		                        <a class="thumbnail" href="spas/F1460.html"><img src="images/spas/calF1640.jpg"></a>
-		                    </li>
-
-		                     <li class="col-sm-4">
-		                     	<h4 class="center">Swim Spa F1770</h4>
-		                        <a class="thumbnail" href="spas/F1770.html"><img src="images/spas/F1770.jpg"></a>
-		                    </li>
-
-		                </ul>
+		              	<img class="img-responsive" src="images/spa_header4.jpg" alt="Cal-Spa Header"/>
 		            </div>
 				</div>
 			</div>
