--- a/spas.html
+++ b/spas.html
@@ -35,6 +35,7 @@
 						<div id="navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
                 				<li><a href="index.html">Home</a></li>
+                				<li><a href="bbq-islands.html">BBQ Islands</a></li>
                 				<li class="dropdown hidden-xs"><a href="grills.html"role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="grills.html#lion">Lion</a></li>
