--- a/spas/F1239.html
+++ b/spas/F1239.html
@@ -55,7 +55,7 @@
                 						<li><a href="../cal-spas.html">Cal Spas</a></li>
                 					</ul>
                 				</li>
-                				<li class="active dropdown hidden-xs"><a href="spas.html" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
+                				<li class="active dropdown hidden-xs"><a href="../spas.html" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="../swim-spas.html">Swim Spas</a></li>
                 						<li><a href="../cal-spas.html">Cal Spas</a></li>
