--- a/spas/F1439.html
+++ b/spas/F1439.html
@@ -34,35 +34,34 @@
 						<div id="navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
                 				<li><a href="../index.html">Home</a></li>
-                				<li><a href="islands.html">Islands</a></li>
-                				<li class="active dropdown hidden-xs"><a href="../grills.html"role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
+                				<li class=" dropdown hidden-xs"><a href="../grills.html"role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="../grills.html#lion">Lion</a></li>
                 						<li><a href="../grills.html#cal-flame">Allegra</a></li>
                 						<li><a href="../grills.html#fire-magic">Fire Magic</a></li>
                 					</ul>
-                				<li class="active dropdown hidden-lg hidden-md hidden-sm"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
+                				<li class=" dropdown hidden-lg hidden-md hidden-sm"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="../grills.html#lion">Lion</a></li>
                 						<li><a href="../grills.html#cal-flame">Allegra</a></li>
                 						<li><a href="../grills.html#fire-magic">Fire Magic</a></li>
                 					</ul>
                 				</li>
-                				<li><a href="../patio.html">Patio</a></li>
-                				<li class="dropdown hidden-sm hidden-md hidden-lg"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
+                                <li><a href="../patio.html">Patio</a></li>
+                				
+                				<li class="active dropdown hidden-sm hidden-md hidden-lg"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="../swim-spas.html">Swim Spas</a></li>
                 						<li><a href="../cal-spas.html">Cal Spas</a></li>
                 					</ul>
                 				</li>
-                				<li class="dropdown hidden-xs"><a href="spas.html" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
+                				<li class="active dropdown hidden-xs"><a href="../spas.html" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="../swim-spas.html">Swim Spas</a></li>
                 						<li><a href="../cal-spas.html">Cal Spas</a></li>
                 					</ul>
                 				</li>
                 				<li><a href="../contact.html">Contact</a></li>
-                				 
               				</ul>
 						</div>
 					</div>
@@ -75,46 +74,16 @@
 			<div class="container-fluid default-background">
 				<div class="row">
 					<div class="col-xs-12">
-						<h1 style="font-weight:bold; border-bottom:3px solid #EEE">Echelon Diamond E660i*</h1>
+						<h1 style="font-weight:bold; border-bottom:3px solid #EEE">Swim Spa F1439</h1>
 					</div>
 				</div>
 
 				<div class="row top-buffer">
-					<div class="col-xs-12 hidden visible-xs nopadding">
-						<img class="img-responsive" src="../images/firemagic/grill-model-echelon-e660i-lg.jpg" alt="E660i">
-					</div>
-					<div class="col-xs-12 col-sm-6  nopadding">
-                        <img class="img-responsive" style="margin-left: 30px; margin-bottom: 15px;" src="../images/firemagic/grill-title-echelon-e660i.gif">
-						<ul>
-							<li>Wood chip smoker with dedicated 3,000 BTU’s burner</li>
-							<li>Cast stainless steel burners (E-burners)</li>
-							<li>Available with Double Side Burner or Single Side Burner</li>
-							<li>Contoured control panel</li>
-							<li>16 gauge stainless steel flavor grids</li>
-							<li>Back lit safety knobs</li>
-							<li>Optional magic view window</li>
-							<li>Heat zone separators</li>
-							<li>Four (4) zone illuminated chromed digital thermometer with meat probe</li>
-							<li>Halogen lamps for evening grilling</li>
-							<li>Cut out 31 ¼”w x 23 ½” d x 12” h</li>
-							<li>BTUs backburner 11,000 (x2)</li>
-							<li>Cooking Surface 660 square inches (30″ x 22″)</li>
-						</ul>
-					</div>
-					<div class="col-sm-6 hidden-xs nopadding">
-						<img class="img-responsive" src="../images/firemagic/grill-model-echelon-e660i-lg.jpg" alt="E660i">
-					</div>
+					<div class="col-xs-12">
+                        <img class="img-responsive" src="../images/spas/F1439-flyer.jpg" alt="F1439 Flyer"></img>
+                    </div>
 
 				</div>
-
-            <div class="row">
-                    <div class="col-xs-12">
-                        <p><strong>15 Year warranty on backburners</strong><br>
-                            Cast stainless steel burners, stainless steel housing and stainless steel cooking grids are warranted for as long as you own your grill
-                        </p>
-                    </div>
-			</div>
-		</div>
 
 	</body>
 </html>
