--- a/patio.html
+++ b/patio.html
@@ -34,6 +34,7 @@
 						<div id="navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
                 				<li><a href="index.html">Home</a></li>
+                				<li><a href="bbq-islands.html">BBQ Islands</a></li>
                 				<li class="dropdown hidden-xs"><a href="grills.html"role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="grills.html#lion">Lion</a></li>
@@ -47,18 +48,8 @@
                 						<li><a href="grills.html#fire-magic">Fire Magic</a></li>
                 					</ul>
                 				</li>
-                				<li class="active dropdown hidden-lg hidden-md hidden-sm"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
-                					<ul class="dropdown-menu">
-                						<li><a href="patio.html#darlee">Darlee</a></li>
-                						<li><a href="patio.html#summerset">Summerset</a></li>
-                					</ul>
-                				</li>
-                				<li class="active dropdown hidden-xs"><a href="patio.html"  role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
-                					<ul class="dropdown-menu">
-                						<li><a href="patio.html#darlee">Darlee</a></li>
-                						<li><a href="patio.html#summerset">Summerset</a></li>
-                					</ul>
-                				</li>
+                				<li><a href="patio.html">Patio</a></li>
+                				
                 				<li class="dropdown hidden-sm hidden-md hidden-lg"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="swim-spas.html">Swim Spas</a></li>
