added virtual tour, google maps is now responsive

--- a/patio.html
+++ b/patio.html
@@ -48,7 +48,7 @@
                 						<li><a href="grills.html#fire-magic">Fire Magic</a></li>
                 					</ul>
                 				</li>
-                				<li><a href="patio.html">Patio</a></li>
+                				<li class="active"><a href="patio.html">Patio</a></li>
                 				
                 				<li class="dropdown hidden-sm hidden-md hidden-lg"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
@@ -62,6 +62,7 @@
                 						<li><a href="cal-spas.html">Cal Spas</a></li>
                 					</ul>
                 				</li>
+                				<li><a href="tour.html">Tour</a></li>
                 				<li><a href="contact.html">Contact</a></li>
               				</ul>
 						</div>
