fixed filepath to virtual tour

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                 						<li><a href="cal-spas.html">Cal Spas</a></li>
                 					</ul>
                 				</li>
-                				<li><a href="tour.html">Tour</a></li>
+                				<li><a href="virtual-tour.html">Tour</a></li>
                 				<li class="active"><a href="contact.html">Contact</a></li>
               				</ul>
 						</div>
