--- a/virtual-tour.html
+++ b/virtual-tour.html
@@ -96,7 +96,7 @@
                 						<li><a href="cal-spas.html">Cal Spas</a></li>
                 					</ul>
                 				</li>
-                                <li class="active"><a href="tour.html">Tour</a></li>
+                                <li class="active"><a href="virtual-tour.html">Tour</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                 				
                 				
