--- a/patio.html
+++ b/patio.html
@@ -62,7 +62,7 @@
                 						<li><a href="cal-spas.html">Cal Spas</a></li>
                 					</ul>
                 				</li>
-                				<li><a href="tour.html">Tour</a></li>
+                				<li><a href="virtual-tour.html">Tour</a></li>
                 				<li><a href="contact.html">Contact</a></li>
               				</ul>
 						</div>
